fix map InfoWindow size and InfoWindow content sizes to fit better, particularly on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@
 
 .location-img {
   margin-bottom: 12px;
+  width: 120px !important;
 }
 
 .foursquare {
@@ -157,6 +158,23 @@
   .main-header-text {
     font-size: 1.5rem;
     padding: 6px;
+  }
+
+  .App-header {
+    background-color: #253959;
+    height: 60px;
+    padding: 12px;
+  }
+
+  #map-container {
+    height: calc(100% - (60px + 48px));
+    width: 100%;
+    position: fixed;
+    margin-top: 60px;
+  }
+
+  p.standard-text {
+    max-width: 180px;
   }
 
 }
